--- a/src/component/CheckList/index.css
+++ b/src/component/CheckList/index.css
@@ -1,14 +1,10 @@
 body {
-	margin: 0 auto;
+	margin: 5 auto;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
 	  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
 	  sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-  }
-
-  text{
-	text-decoration-color: white;
   }
   
   code {
@@ -18,11 +14,10 @@ body {
 
   .todo {
 	cursor: pointer;
-
   }
 
 
-  .strike {
+  /* .strike {
 	text-decoration: line-through;
   }
-  
+   */
