--- a/src/component/CheckList/checklistStyle.css
+++ b/src/component/CheckList/checklistStyle.css
@@ -12,10 +12,21 @@ body {
 	  monospace;
   }
 
-  .todo {
+  /* .to-do {
 	cursor: pointer;
   }
 
+  .to-do:complete{
+	background-color: black;
+	cursor: pointer;
+	text-decoration: line-through;
+  } */
+
+  .checkList{
+	display: flex;
+	flex-direction: column;
+	background-color: aliceblue;
+  }
 
   /* .strike {
 	text-decoration: line-through;
