--- a/src/component/pomodoro.css
+++ b/src/component/pomodoro.css
@@ -8,7 +8,7 @@
 }
 
 .timer{
-    background-color: #ece5ce;
+    background-color: #83af9b;
     width: 10vw;
     border: 4px solid #774f38;
     display: flex;
@@ -20,19 +20,21 @@
     font-weight: bold;
     letter-spacing: 3px;
     font-size: 30px;
+    border-radius: 11px;
     
 }
 
 .messageContainer {
-    display: flex;
+    position: absolute;
     flex-direction: row;
     justify-content: center;
+    margin-bottom: 500px; /*speech bubble position*/
 
 }
 
 .timerContainer {
     position: absolute;
-    bottom: 25px;
+    margin-top: 100px;
     flex-direction: row;
     justify-content: center;
 
@@ -40,8 +42,13 @@
 
 .playPauseButtons{
     position: absolute;
-    bottom: 0;
+    margin-top: 200px;
 
+}
+
+.resetButton{
+    position: absolute;
+    margin-top: 250px;
 }
 
 
@@ -124,5 +131,65 @@ body .messageContainer:after {
     100% {
         line-height: 30px;
         transform: translatey(0px);
+    }}
+
+    
+    .playPause {
+        align-items: center;
+        background-color: #83af9b;
+        border: 2px solid #111;
+        border-radius: 5px;
+        box-sizing: border-box;
+        color: #774f38;
+        cursor: pointer;
+        display: flex;
+        font-family: Inter, sans-serif;
+        font-weight: bold;
+        font-size: 12px;
+        height: 30px;
+        justify-content: center;
+        line-height: 24px;
+        max-width: 100%;
+        padding: 0 25px;
+        position: relative;
+        text-align: center;
+        text-decoration: none;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
     }
-}
+
+    .playPause:after {
+        background-color: #111;
+        border-radius: 5px;
+        content: "";
+        display: block;
+        height: 30px;
+        left: 0;
+        width: 100%;
+        position: absolute;
+        top: -2px;
+        transform: translate(5px, 5px);
+        transition: transform .2s ease-out;
+        z-index: -1;
+    }
+
+    .playPause:hover:after {
+        transform: translate(0, 0);
+    }
+
+    .playPause:active {
+        background-color: #83af9b;
+        outline: 0;
+    }
+
+    .playPause:hover {
+        outline: 0;
+    }
+
+    @media (min-width: 768px) {
+        .playPause {
+            padding: 0 40px;
+        }
+    }
+
