--- a/src/component/pomodoro.css
+++ b/src/component/pomodoro.css
@@ -1,4 +1,4 @@
-.message{
+.message {
     /* width: 10vw; */
     font-size: 2vw;
     display: flex;
@@ -7,13 +7,13 @@
 
 }
 
-.timer{
-    background-color: #83af9b;
+.timer {
+    background-color: #CCEBE7;
     width: 10vw;
     border: 4px solid #774f38;
     display: flex;
     flex-direction: row;
-    justify-content:center;
+    justify-content: center;
     color: #774f38;
     text-align: center;
     text-transform: uppercase;
@@ -21,40 +21,34 @@
     letter-spacing: 3px;
     font-size: 30px;
     border-radius: 11px;
-    
+
 }
 
 .messageContainer {
     position: absolute;
     flex-direction: row;
     justify-content: center;
-    margin-bottom: 500px; /*speech bubble position*/
-
+    margin-top: -165vh;
 }
 
 .timerContainer {
     position: absolute;
-    margin-top: 100px;
+    margin-top: -55vh;
     flex-direction: row;
     justify-content: center;
 
+
 }
 
-.playPauseButtons{
+.playPauseButtons {
     position: absolute;
-    margin-top: 200px;
+    margin-top: -40vh;
 
 }
 
-.resetButton{
-    position: absolute;
-    margin-top: 250px;
-}
 
-
-body .pomodoroTimer{
-    height: 100vh;
-    margin: 0;
+body .pomodoroTimer {
+    height: -100vh;
     display: grid;
     place-items: center;
     font: 2vw system-ui;
@@ -64,18 +58,19 @@ body .pomodoroTimer{
 body .messageContainer {
     transform: translatey(0px);
     animation: float 5s ease-in-out infinite;
-    mix-blend-mode: multiply;
     text-align: center;
     text-transform: uppercase;
     font-weight: bold;
     letter-spacing: 3px;
     font-size: 15px;
     color: #774f38;
-    background-color: #ece5ce;
+    background-color: #CCEBE7;
     padding: 30px;
     border-radius: 11px;
+    left: 120px;
     position: relative;
-    box-shadow: 20px 20px #83af9b;
+    box-shadow: 10px 10px #94C6C9;
+    
 }
 
 body .messageContainer:after {
@@ -83,8 +78,8 @@ body .messageContainer:after {
     animation: float2 5s ease-in-out infinite;
     content: ".";
     font-weight: bold;
-    -webkit-text-fill-color: #ece5ce;
-    text-shadow: 22px 22px #83af9b;
+    -webkit-text-fill-color: #CCEBE7;
+    text-shadow: 3px 3px #94C6C9;
     text-align: left;
     font-size: 55px;
     width: 55px;
@@ -96,7 +91,7 @@ body .messageContainer:after {
     display: block;
     bottom: -30px;
     left: 0;
-    box-shadow: 22px 22px #83af9b;
+    box-shadow: 10px 10px #83af9b;
     z-index: -2;
 }
 
@@ -106,7 +101,7 @@ body .messageContainer:after {
     }
 
     50% {
-        transform: translatey(-20px);
+        transform: translatey(-10px);
     }
 
     100% {
@@ -121,75 +116,74 @@ body .messageContainer:after {
     }
 
     55% {
-        transform: translatey(-20px);
+        transform: translatey(-10px);
     }
 
     60% {
-        line-height: 10px;
+        line-height: 5px;
     }
 
     100% {
-        line-height: 30px;
+        line-height: 20px;
         transform: translatey(0px);
-    }}
+    }
+}
 
-    
+
+.playPause {
+    align-items: center;
+    background-color: #CCEBE7;
+    border: 4px solid #774f38;
+    border-radius: 5px;
+    box-sizing: border-box;
+    color: #774f38;
+    cursor: pointer;
+    display: flex;
+    font-weight: bold;
+    font-size: 12px;
+    height: 30px;
+    justify-content: center;
+    line-height: 24px;
+    max-width: 100%;
+    padding: 0 25px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.playPause:after {
+    background-color: green;
+    border-radius: 5px;
+    content: "";
+    display: block;
+    height: 30px;
+    left: 0;
+    width: 100%;
+    position: absolute;
+    top: -2px;
+    transform: translate(5px, 5px);
+    transition: transform .2s ease-out;
+    z-index: -1;
+}
+
+.playPause:hover:after {
+    transform: translate(0, 0);
+}
+
+.playPause:active {
+    background-color: #94C6C9;
+    outline: 0;
+}
+
+.playPause:hover {
+    outline: 0;
+}
+
+@media (min-width: 768px) {
     .playPause {
-        align-items: center;
-        background-color: #83af9b;
-        border: 2px solid #111;
-        border-radius: 5px;
-        box-sizing: border-box;
-        color: #774f38;
-        cursor: pointer;
-        display: flex;
-        font-family: Inter, sans-serif;
-        font-weight: bold;
-        font-size: 12px;
-        height: 30px;
-        justify-content: center;
-        line-height: 24px;
-        max-width: 100%;
-        padding: 0 25px;
-        position: relative;
-        text-align: center;
-        text-decoration: none;
-        user-select: none;
-        -webkit-user-select: none;
-        touch-action: manipulation;
+        padding: 0 40px;
     }
-
-    .playPause:after {
-        background-color: #111;
-        border-radius: 5px;
-        content: "";
-        display: block;
-        height: 30px;
-        left: 0;
-        width: 100%;
-        position: absolute;
-        top: -2px;
-        transform: translate(5px, 5px);
-        transition: transform .2s ease-out;
-        z-index: -1;
-    }
-
-    .playPause:hover:after {
-        transform: translate(0, 0);
-    }
-
-    .playPause:active {
-        background-color: #83af9b;
-        outline: 0;
-    }
-
-    .playPause:hover {
-        outline: 0;
-    }
-
-    @media (min-width: 768px) {
-        .playPause {
-            padding: 0 40px;
-        }
-    }
-
+}
