--- a/src/component/pdfStyle.css
+++ b/src/component/pdfStyle.css
@@ -11,7 +11,7 @@
 }
 
 .btn:hover{
-
+    background-color: #a6d9dd;
 }
 
 .container{
@@ -31,5 +31,9 @@
 .pdf-container{
     background-color: #CCEBE7;
     height: 60vh;
-    
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.4rem;
 }
