--- a/src/component/pomodoro/pomodoro.css
+++ b/src/component/pomodoro/pomodoro.css
@@ -8,9 +8,7 @@
 }
 
 .timer {
-    background-color: #CCEBE7;
-    width: 10vw;
-    border: 4px solid #774f38;
+    
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -20,7 +18,7 @@
     font-weight: bold;
     letter-spacing: 3px;
     font-size: 30px;
-    border-radius: 11px;
+    
 
 }
 
@@ -34,6 +32,11 @@
 .timerContainer {
     position: absolute;
     margin-top: -55vh;
+    padding: 1rem;
+    background-color: #CCEBE7;
+    width: 15vw;
+    border: 4px solid #774f38;
+    border-radius: 1rem;
     flex-direction: row;
     justify-content: center;
 
@@ -45,7 +48,6 @@
     margin-top: -40vh;
 
 }
-
 
 body .pomodoroTimer {
     height: -100vh;
